add get all and bad delete TODO delete
